@@ -1,6 +1,12 @@
 pipeline {
   agent any
+  tools {
+        maven 'maven' // Specify the version of Maven you want to use
+    }
 
+    environment {
+        MAVEN_OPTS = '--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED'
+    }
   stages {
       stage('Build Artifact') {
             steps {
